<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bacground_card"
        android:elevation="@dimen/dimen_5dp"
        android:padding="@dimen/dimen_10dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/rl_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_5dp">


            <LinearLayout
                android:id="@+id/ll_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bacground_card">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/food_image" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/dimen_10dp"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_shop_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/playfairdisplay_regular"
                            android:text="@string/restaurant_name"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/location"
                            android:textColor="@color/text"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:background="@color/background_steps" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/items"
                        android:textColor="@color/gray_text"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_items"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/item_name"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/ordered_on"
                        android:textAllCaps="true"
                        android:textColor="@color/gray_text"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_ordered_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/date"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/total_amt"
                        android:textAllCaps="true"
                        android:textColor="@color/gray_text"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_total_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_10dp"
                        android:text="@string/amt"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_closed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/closed"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:layout_marginBottom="@dimen/dimen_5dp"
                        android:background="@color/background_steps" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_item"
                android:padding="@dimen/dimen_10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/cancel_order_bg">

                    <TextView
                        android:id="@+id/tv_cancel_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="@dimen/dimen_5dp"
                        android:paddingRight="@dimen/dimen_5dp"
                        android:text="Cancel order"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/redtext"
                        android:textSize="14sp"
                        android:visibility="gone" />


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                   <!-- <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Address"
                        android:textColor="@color/black"
                        android:textSize="14sp" />-->
                    <Button
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Address"
                        android:background="@color/white"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_14" />


                    <Spinner
                        android:id="@+id/order_spenner"
                        android:layout_width="@dimen/dimen_150"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/dimen_5dp"
                        android:paddingBottom="@dimen/dimen_5dp"
                        android:spinnerMode="dropdown"
                        android:layout_alignParentRight="true"/>


<!--
                    <LinearLayout
                        android:layout_width="@dimen/dimen_150"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="vertical">




                        <RelativeLayout
                            android:id="@+id/rl_spinner_project"
                            android:layout_width="match_parent"
                            android:layout_alignParentRight="true"

                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_order_spinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_toLeftOf="@id/iv_order_expand"
                                android:fontFamily="@font/poppins_regular"
                                android:padding="@dimen/dimen_5dp"
                                android:text="Project"
                                android:textColor="@color/text"
                                android:textSize="@dimen/textSize_12sp" />

                            <ImageView
                                android:id="@+id/iv_order_expand"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_keyboard_arrow_down" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/project_error"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Please select one project"
                            android:textColor="@color/red"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:visibility="gone"
                            android:fontFamily="@font/poppins_regular"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@+id/rl_spinner"
                            android:orientation="vertical"
                            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rv_order_dropdown"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/rl_spinner"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:overScrollMode="never"
                                android:scrollbars="none"
                                android:visibility="gone" />

                        </LinearLayout>
                    </LinearLayout>
-->


                </RelativeLayout>


            </RelativeLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>